trunk/Archive2/43/7deaf5ef4750a9/output
main.cpp: In function 'int main()':
main.cpp:10:5: error: expected ',' or ';' before 'for'
     for (int i : {100,200,300,400,500,600}) // access by direct sequence of values
     ^
main.cpp:10:43: error: expected primary-expression before ')' token
     for (int i : {100,200,300,400,500,600}) // access by direct sequence of values
                                           ^
main.cpp:10:43: error: expected ';' before ')' token
main.cpp:7:9: warning: unused variable 'iarr' [-Wunused-variable]
     int iarr[] = {10,20,30,40,50,60,70,80} 
         ^
